--- a/hu.bme.mit.dipterv.text.example/.classpath
+++ b/hu.bme.mit.dipterv.text.example/.classpath
@@ -36,5 +36,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/home/meres/Documents/commons-lang3-3.12.0/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
