[Xtend] Moved static generated automaton classes to util package
Util package classes are in separate maven module
Disabled unit tests for parser

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>hu.bme.mit.dipterv.text.feature</module>
 		<module>hu.bme.mit.dipterv.text.repository</module>
 		<module>hu.bme.mit.dipterv.text.tests</module>
+		<module>hu.bme.mit.dipterv.text.util</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
