[Xtend] Moved some more static code from generated part to static util package
Fixed code generation

--- a/hu.bme.mit.dipterv.text.example/pom.xml
+++ b/hu.bme.mit.dipterv.text.example/pom.xml
@@ -27,6 +27,8 @@
 </dependencies>
 
 <build>	
+	<sourceDirectory>src</sourceDirectory>
+
 	<plugins>
 		<plugin>
 			<groupId>org.eclipse.xtext</groupId>
