Added new mobile testcase
Added compare logic for transitions
This helps sort transitions for specific states and improves transition trigger logic

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ script:
  - mvn clean install -U
  - cd hu.bme.mit.dipterv.text.example
  - mvn clean install -U
+ - cd ../hu.bme.mit.dipterv.text.mobileexample
+ - mvn clean install -U
