--- a/hu.bme.mit.dipterv.text.operatorexample/pom.xml
+++ b/hu.bme.mit.dipterv.text.operatorexample/pom.xml
@@ -1,19 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-		<groupId>hu.bme.mit.dipterv.text</groupId>
-		<artifactId>hu.bme.mit.dipterv.text.parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
+    <groupId>hu.bme.mit.dipterv.text</groupId>
+    <artifactId>hu.bme.mit.dipterv.text.parent</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
+  </parent>
+  <artifactId>hu.bme.mit.dipterv.text.operatorexample</artifactId>
 
-  <artifactId>hu.bme.mit.dipterv.text.example</artifactId>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
 
-<properties>
-	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-</properties>
-
-<dependencies>
+  <dependencies>
 	<dependency>
 		<groupId>${project.groupId}</groupId>
 		<artifactId>hu.bme.mit.dipterv.text.util</artifactId>
@@ -70,5 +69,4 @@
 		</plugin>
 	</plugins>
 </build>
-
 </project>
