[Xtend] Added complex operator test scenario
Fixed parenthesis error in required future message
Added test scenario with alt and loop operators
Testcase added to maven CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,5 @@ script:
  - mvn clean install -U
  - cd ../hu.bme.mit.dipterv.text.parexample
  - mvn clean install -U
+ - cd ../hu.bme.mit.dipterv.text.operatorexample
+ - mvn clean install -U
